# config

./: .better-commits.json  .gitignore  Makefile  Readme.md  finch.nix  flake.nix  lib.nix  profiles.nix  release-please.nix  shobo.sh  tfenv.nix
common/: default.nix  packages.nix
common/git/: default.nix
common/nvim/: default.nix
common/nvim/config/: init.lua
common/nvim/config/lua/: plugins.lua
common/starship/: default.nix
common/tmux/: default.nix
common/wezterm/: default.nix
common/zsh/: default.nix
config/hypr/: hyperland.conf
darwin/: default.nix  home.nix  skhd.conf  skhd.nix  yabai.nix
darwin/homebrew/: default.nix
home-manager/: bettercommit.nix  default.nix  gha.nix  packages.nix  prettierd.nix  testfixtures.nix  vtsls.nix  zmx.nix
home-manager/modules/: bat.nix  bitwarden.nix  bug-warrior.nix  fzf.nix  ghostty.nix  git.nix  gpg.nix  gruvbox_rainbow.toml  hyprland.nix  nix-index.nix  tmux.nix  waybar.nix  wezterm.nix  wofi.nix  zsh.nix
home-manager/modules/firefox/: default.nix  userChrome.css
home-manager/modules/linux/: poly.nix  x.nix
home-manager/modules/nvim/: default.nix  lazy-lock.json
home-manager/modules/nvim/colors/: grubby.lua
home-manager/modules/nvim/config/: .luacheckrc  .luarc.json  filetype.lua  init.lua  nvim-pack-lock.json
home-manager/modules/nvim/config/ftplugin/: cpp.lua  go.lua  (+3 more)
home-manager/modules/wezterm/: colors.lua  font.lua  keys.lua  links.lua  tabs.lua  wezterm.lua  workspace.lua
hosts/lab/: configuration.nix  hardware-configuration.nix
hosts/lab/modules/: adguard.nix  mealie.nix  paperless.nix
hosts/modules/: common.nix  hyprland.nix
hosts/nixbox/: configuration.nix  hardware-configuration.nix
hosts/nixtop/: home.nix
hosts/snowball/: configuration.nix  hardware-configuration.nix
hosts/workbook/: home.nix
modules/: nix.nix
modules/darwin/: default.nix
modules/darwin/skhd/: default.nix  skhd.conf
modules/darwin/yabai/: default.nix
modules/linux/: network.nix  system.nix  window.nix
modules/linux/hardware/: nixos-laptop.nix
overlays/: bug-warrior.nix
pkgs/: gitspice.nix  import.nix  ob-hd-package-lock.json  ob-hd.nix  prlsp.nix  zmx.nix
pkgs/ob-hd/: node-packages.nix
secrets/: .sops.yaml  default.nix  shared.yaml
templates/cpp/: .gitignore  CMakeLists.txt  flake.nix
~/.config/ghostty/: config
~/.config/pulse/: cookie
(+244 files in other folders)
